# aimo-projekt

./: Analysis.qml  CMakeLists.txt  DoubleSpinBox.qml  Main.qml  Optimization.qml  README.md  analysis_params.h  definicje.h  greywolfoptimizer.cpp  greywolfoptimizer.h  intermediate.h  main.cpp  opt_params.h  optimizationparams.cpp  optimizationvariables.cpp  optimizationvariables.h
